--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!--FIRST CONTAINER - PRESENTATION -->
       <div class="card-white">
-        <img src="https://media.licdn.com/dms/image/C560BAQGKike1l-rRrw/company-logo_200_200/0?e=2159024400&v=beta&t=TKhhyvaA8YoasVoh26LtJ86q-BZcYXgv9oLVRCQ4rYA" alt="Logo Rakuten" width=100 id="logo-rakuten">
+        <img src="https://pbs.twimg.com/profile_images/570659130277257216/mteWqFUF.png" alt="Logo Batch" width=50 id="logo-batch">
         <div class="title-mehdi">
           <h2> Hi, I'm Mehdi  </h2>
         </div>
@@ -28,7 +28,7 @@
         </div>
         <br>
         <br>
-        <p>Used to be a sale, now looking for a Product Owner position. <br>
+        <p>Used to be a sale, now looking for a Product Manager position. <br>
         In my quest to enhance my technical skills I did Le Wagon bootcamp.</p>
         <a class="btn-rose" href="https://www.linkedin.com/in/mehdi-sijelmassi-a0564495/"> Discover my profile</a>
       </div>
